--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+    <style name="ToolBarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@drawable/actionbar_style</item> <!-- Set background color of the action bar to white -->
+        <item name="titleTextColor">@color/black</item> <!-- Set text color of the action bar title to black -->
+        <item name="titleMarginStart">0dp</item>
+        <item name="contentInsetStart">0dp</item>
+        <item name="contentInsetStartWithNavigation">0dp</item>
+        <item name="android:elevation">16dp</item>
+    </style>
+
     <style name="Theme.PlantScanner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
@@ -12,5 +21,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="toolbarStyle">@style/ToolBarStyle</item>
+        <item name="homeAsUpIndicator">@drawable/arrow_left_svgrepo_com</item>
     </style>
 </resources>
