--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="48sp"
-        android:text="Camera Placeholder" />
+        android:text="@string/camera_placeholder" />
 
 </FrameLayout>
