--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainPageFragment">
+    tools:context=".HomeFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/settingsFAB"
@@ -39,6 +39,6 @@
         android:textSize="48sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="History Placeholder" />
+        android:text="@string/history_placeholder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
