--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="green">#00E369</color>
+    <color name="gray">#D8D8D8</color>
+    <color name="light_gray">#EFF0F6</color>
 </resources>
