dark theme + languages + localization

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -12,9 +12,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/purple_500"
         android:contentDescription="Settings"
         android:src="@drawable/settings_svgrepo_com"
+        android:backgroundTint="@color/main_green"
         app:fabCustomSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,9 +24,9 @@
         android:id="@+id/cameraFAB"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/purple_500"
         android:contentDescription="Camera"
         android:src="@drawable/camera_svgrepo_com"
+        android:backgroundTint="@color/main_green"
         app:fabCustomSize="50dp"
         android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
