--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,8 +12,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/purple_500"
         android:contentDescription="Settings"
+        android:backgroundTint="@color/main_green"
         android:src="@drawable/settings_svgrepo_com"
         app:fabCustomSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/cameraFAB"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:backgroundTint="@color/purple_500"
+        android:backgroundTint="@color/main_green"
         android:contentDescription="Camera"
         android:src="@drawable/camera_svgrepo_com"
         app:fabCustomSize="50dp"
