--- a/app/src/main/res/drawable/arrow_left_svgrepo_com.xml
+++ b/app/src/main/res/drawable/arrow_left_svgrepo_com.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="@color/green"
+      android:strokeColor="@color/main_green"
       android:strokeLineCap="round"/>
 </vector>
