--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -16,8 +16,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="40dp"
         android:layout_marginHorizontal="20dp"
-        app:boxStrokeColor="@color/green"
-        app:hintTextColor="@color/green">
+        app:boxStrokeColor="@color/main_green"
+        app:hintTextColor="@color/main_green">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editEmail"
@@ -41,8 +41,8 @@
         app:layout_constraintTop_toBottomOf="@id/editEmailContainer"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
-        app:boxStrokeColor="@color/green"
-        app:hintTextColor="@color/green">
+        app:boxStrokeColor="@color/main_green"
+        app:hintTextColor="@color/main_green">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editFeedback"
@@ -62,7 +62,7 @@
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginBottom="40dp"
-        app:backgroundTint="@color/green"
+        app:backgroundTint="@color/main_green"
         android:background="@drawable/button_style"
         android:text="@string/send_button_text"
         android:textSize="18sp"
