--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,25 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Tool bar style -->
     <style name="ToolBarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="android:background">@drawable/actionbar_style</item> <!-- Set background color of the action bar to white -->
-        <item name="titleTextColor">@color/black</item> <!-- Set text color of the action bar title to black -->
+        <item name="android:background">@drawable/actionbar_style</item>
+        <item name="titleTextColor">@color/main_text</item>
         <item name="titleMarginStart">0dp</item>
         <item name="contentInsetStart">0dp</item>
         <item name="contentInsetStartWithNavigation">0dp</item>
         <item name="android:elevation">16dp</item>
     </style>
 
+    <!-- Base application theme. -->
     <style name="Theme.PlantScanner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!-- Screen background color. -->
+        <item name="android:windowBackground">@color/screen_background</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/actionbar_background</item>
+        <item name="android:windowLightStatusBar">false</item>
         <!-- Customize your theme here. -->
         <item name="toolbarStyle">@style/ToolBarStyle</item>
         <item name="homeAsUpIndicator">@drawable/arrow_left_svgrepo_com</item>
