--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -1,15 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CameraFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="48sp"
-        android:text="@string/camera_placeholder" />
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:columnCount="2"
+        android:useDefaultMargins="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</FrameLayout>
+        <Button
+            android:id="@+id/b_1"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Apples"
+            android:textColor="@color/light_gray" />
+
+        <Button
+            android:id="@+id/b_2"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Subject 1"
+            android:textColor="@color/light_gray" />
+
+        <Button
+            android:id="@+id/b_3"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Subject 2"
+            android:textColor="@color/light_gray" />
+
+        <Button
+            android:id="@+id/b_4"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Subject 3"
+            android:textColor="@color/light_gray" />
+
+        <Button
+            android:id="@+id/b_5"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Subject 4"
+            android:textColor="@color/light_gray" />
+
+        <Button
+            android:id="@+id/b_6"
+            android:width="120dp"
+            android:height="100dp"
+            android:backgroundTint="@color/main_green"
+            android:text="Subject 5"
+            android:textColor="@color/light_gray" />
+    </GridLayout>
+
+    <ImageView
+        android:id="@+id/click_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
