--- a/app/src/main/res/navigation/default_navigation.xml
+++ b/app/src/main/res/navigation/default_navigation.xml
@@ -6,12 +6,12 @@
 
     <fragment
         android:id="@+id/cameraFragment"
-        android:name="com.example.plantscanner.CameraFragment"
+        android:name="com.example.florascope.CameraFragment"
         android:label="fragment_camera"
         tools:layout="@layout/fragment_camera" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.plantscanner.SettingsFragment"
+        android:name="com.example.florascope.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" >
         <action
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/galleryFragment"
-        android:name="com.example.plantscanner.GalleryFragment"
+        android:name="com.example.florascope.GalleryFragment"
         android:label="fragment_gallery"
         tools:layout="@layout/fragment_gallery" >
         <action
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.plantscanner.HomeFragment"
+        android:name="com.example.florascope.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -44,7 +44,7 @@
     </fragment>
     <fragment
         android:id="@+id/feedbackFragment"
-        android:name="com.example.plantscanner.FeedbackFragment"
+        android:name="com.example.florascope.FeedbackFragment"
         android:label="fragment_feedback"
         tools:layout="@layout/fragment_feedback" />
 </navigation>
