--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Tool bar style -->
     <style name="ToolBarStyle" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="android:background">@drawable/actionbar_style</item>
@@ -10,7 +10,7 @@
     </style>
 
     <!-- Base application theme. -->
-    <style name="Theme.PlantScanner" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Florascope" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Screen background color. -->
         <item name="android:windowBackground">@color/screen_background</item>
 
