--- a/app/src/main/res/navigation/default_navigation.xml
+++ b/app/src/main/res/navigation/default_navigation.xml
@@ -8,7 +8,11 @@
         android:id="@+id/cameraFragment"
         android:name="com.example.florascope.CameraFragment"
         android:label="fragment_camera"
-        tools:layout="@layout/fragment_camera" />
+        tools:layout="@layout/fragment_camera" >
+        <action
+            android:id="@+id/action_cameraFragment_to_diseaseFragment"
+            app:destination="@id/diseaseFragment" />
+    </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.florascope.SettingsFragment"
@@ -47,4 +51,13 @@
         android:name="com.example.florascope.FeedbackFragment"
         android:label="fragment_feedback"
         tools:layout="@layout/fragment_feedback" />
+    <fragment
+        android:id="@+id/diseaseFragment"
+        android:name="com.example.florascope.DiseaseFragment"
+        android:label="fragment_disease"
+        tools:layout="@layout/fragment_disease" >
+        <action
+            android:id="@+id/action_diseaseFragment_to_cameraFragment"
+            app:destination="@id/cameraFragment" />
+    </fragment>
 </navigation>
