added skeleton views for fetched data

--- a/app/src/main/res/layout/fragment_disease.xml
+++ b/app/src/main/res/layout/fragment_disease.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".DiseaseFragment">
 
-    <TextView
+    <aglibs.loading.skeleton.view.SkeletonTextView
         android:id="@+id/disease_title"
         android:layout_width="350dp"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:text="@string/disease_screen_title"
+        android:textAlignment="center"
         android:textColor="@color/main_text"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -19,56 +20,67 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <aglibs.loading.skeleton.view.SkeletonTextView
         android:id="@+id/symptoms_title"
         android:layout_width="350dp"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:text="@string/symptoms"
-        android:textColor="@color/main_text"
         android:layout_marginTop="30dp"
+        android:text="@string/symptoms"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/disease_title"
         app:layout_constraintEnd_toEndOf="@+id/disease_title"
-        app:layout_constraintStart_toStartOf="@+id/disease_title" />
+        app:layout_constraintStart_toStartOf="@+id/disease_title"
+        app:layout_constraintTop_toBottomOf="@id/disease_title" />
 
-    <TextView
+    <aglibs.loading.skeleton.view.SkeletonTextView
         android:id="@+id/symptoms_text"
         android:layout_width="350dp"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:lineSpacingExtra="4dp"
+        android:text="@string/longTextPlaceHolder"
+        android:textAlignment="center"
         android:textColor="@color/main_text"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/symptoms_title"
         app:layout_constraintStart_toStartOf="@+id/symptoms_title"
-        app:layout_constraintTop_toBottomOf="@+id/symptoms_title" />
+        app:layout_constraintTop_toBottomOf="@+id/symptoms_title"
+        app:splitSkeletonTextByLines="true" />
 
-    <TextView
+    <aglibs.loading.skeleton.view.SkeletonTextView
         android:id="@+id/prevention_title"
         android:layout_width="350dp"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:text="@string/treatment"
-        android:textColor="@color/main_text"
         android:layout_marginTop="30dp"
+        android:text="@string/treatment"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/symptoms_text"
         app:layout_constraintEnd_toEndOf="@+id/symptoms_text"
-        app:layout_constraintStart_toStartOf="@+id/symptoms_text" />
+        app:layout_constraintStart_toStartOf="@+id/symptoms_text"
+        app:layout_constraintTop_toBottomOf="@id/symptoms_text" />
 
-    <TextView
-        android:id="@+id/prevention_text"
+    <ScrollView
         android:layout_width="350dp"
-        android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_marginTop="10dp"
-        android:textColor="@color/main_text"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/prevention_title"
         app:layout_constraintStart_toStartOf="@+id/prevention_title"
-        app:layout_constraintTop_toBottomOf="@+id/prevention_title" />
+        app:layout_constraintTop_toBottomOf="@+id/prevention_title">
+
+        <aglibs.loading.skeleton.view.SkeletonTextView
+            android:id="@+id/prevention_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lineSpacingExtra="4dp"
+            android:text="@string/longTextPlaceHolder"
+            android:textAlignment="center"
+            android:textColor="@color/main_text"
+            android:textSize="18sp"
+            app:splitSkeletonTextByLines="true" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
