--- a/app/src/main/res/layout/fragment_disease.xml
+++ b/app/src/main/res/layout/fragment_disease.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DiseaseFragment">
+    tools:context=".fragments.DiseaseFragment">
 
     <aglibs.loading.skeleton.view.SkeletonTextView
         android:id="@+id/disease_title"
