--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LanguageSelectionFragment">
+    tools:context=".fragments.LanguageSelectionFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/languageRu"
