--- a/app/src/main/res/navigation/default_navigation.xml
+++ b/app/src/main/res/navigation/default_navigation.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/cameraFragment"
-        android:name="com.example.florascope.CameraFragment"
+        android:name="com.example.florascope.fragments.CameraFragment"
         android:label="fragment_camera"
         tools:layout="@layout/fragment_camera" >
         <action
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.florascope.SettingsFragment"
+        android:name="com.example.florascope.fragments.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" >
         <action
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.florascope.HomeFragment"
+        android:name="com.example.florascope.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -36,12 +36,12 @@
     </fragment>
     <fragment
         android:id="@+id/feedbackFragment"
-        android:name="com.example.florascope.FeedbackFragment"
+        android:name="com.example.florascope.fragments.FeedbackFragment"
         android:label="fragment_feedback"
         tools:layout="@layout/fragment_feedback" />
     <fragment
         android:id="@+id/diseaseFragment"
-        android:name="com.example.florascope.DiseaseFragment"
+        android:name="com.example.florascope.fragments.DiseaseFragment"
         android:label="fragment_disease"
         tools:layout="@layout/fragment_disease" >
         <action
@@ -50,7 +50,7 @@
     </fragment>
     <fragment
         android:id="@+id/languageSelectionFragment"
-        android:name="com.example.florascope.LanguageSelectionFragment"
+        android:name="com.example.florascope.fragments.LanguageSelectionFragment"
         android:label="fragment_language_selection"
         tools:layout="@layout/fragment_language_selection" />
 </navigation>
