--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,7 +6,7 @@
     <color name="gray">#D8D8D8</color>
     <color name="light_gray">#EFF0F6</color>
 
-    <color name="main_green">#00E369</color>
+    <color name="main_green">#21C063</color>
     <color name="screen_background">#303030</color>
     <color name="main_text">#FFFFFF</color>
 
