--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -11,23 +11,26 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="300dp"
         android:layout_height="48dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="40dp"
+        app:boxStrokeColor="@color/main_green"
+        app:cursorColor="@android:color/holo_orange_dark"
+        app:hintTextColor="@color/main_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="40dp"
-        android:layout_marginHorizontal="20dp"
-        app:boxStrokeColor="@color/main_green"
-        app:hintTextColor="@color/main_green">
+        app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editEmail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:lines="1"
-                android:inputType="textEmailAddress"
-                android:hint="@string/email">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editEmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:lines="1"
+            android:textColorHighlight="@android:color/holo_orange_light"
+            android:theme="@style/TextHandlersColor">
 
-            </com.google.android.material.textfield.TextInputEditText>
+        </com.google.android.material.textfield.TextInputEditText>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -36,22 +39,25 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        app:boxStrokeColor="@color/main_green"
+        app:cursorColor="@android:color/holo_orange_dark"
+        app:hintTextColor="@color/main_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editEmailContainer"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp"
-        app:boxStrokeColor="@color/main_green"
-        app:hintTextColor="@color/main_green">
+        app:layout_constraintTop_toBottomOf="@id/editEmailContainer">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editFeedback"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:lines="1"
-            android:inputType="textEmailAddress"
+            android:gravity="top"
             android:hint="@string/feedback"
-            android:gravity="top">
+            android:inputType="textEmailAddress"
+            android:lines="1"
+            android:textColorHighlight="@android:color/holo_orange_light"
+            android:theme="@style/TextHandlersColor">
 
         </com.google.android.material.textfield.TextInputEditText>
 
@@ -62,14 +68,14 @@
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginBottom="40dp"
-        app:backgroundTint="@color/main_green"
         android:background="@drawable/button_style"
         android:text="@string/send_button_text"
-        android:textSize="18sp"
+        android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="18sp"
+        app:backgroundTint="@color/main_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent">
 
     </Button>
