--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -68,4 +68,17 @@
 
     </GridLayout>
 
+    <Button
+        android:id="@+id/buttonTest"
+        android:layout_width="300dp"
+        android:layout_height="120dp"
+        android:width="120dp"
+        android:height="100dp"
+        android:backgroundTint="@color/main_green"
+        android:text="Test"
+        android:textColor="@color/light_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
