--- a/app/src/main/res/layout/fragment_disease.xml
+++ b/app/src/main/res/layout/fragment_disease.xml
@@ -9,11 +9,12 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.9">
@@ -97,33 +98,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/saveResultButton"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/button_style"
-        android:text="Save"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:backgroundTint="@color/main_green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView2"/>
-
-    <Button
-        android:id="@+id/discardResultButton"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/button_style"
-        android:text="Discard"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:backgroundTint="@android:color/holo_red_dark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/scrollView2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
