--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logov2"
         android:layout_centerInParent="true"
         android:id="@+id/splashAc"
         android:contentDescription="@string/splash_logo" />
