--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,4 +21,13 @@
         <item name="toolbarStyle">@style/ToolBarStyle</item>
         <item name="homeAsUpIndicator">@drawable/arrow_left_svgrepo_com</item>
     </style>
+
+    <style name="SplashScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Screen background color. -->
+        <item name="android:windowBackground">@color/screen_background</item>
+
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/screen_background</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
 </resources>
