--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,7 +27,7 @@
         <item name="android:windowBackground">@color/screen_background</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/actionbar_background</item>
+        <item name="android:statusBarColor">@color/screen_background</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
